# python-daily-challenge-backend

./: .env.example  pyproject.toml  server.py
migrations/: env.py
migrations/versions/: 70919f902a7e_initial_migration.py
src/: ai_generator.py  app.py  logger.py  utils.py
src/core/: config.py
src/database/: db.py  models.py
src/dependencies/: auth.py
src/routes/: challenge.py  webhooks.py
src/schemas/: auth.py
